fix: table filtering row z-index change

--- a/packages/react-ui/styles/collections/_table.scss
+++ b/packages/react-ui/styles/collections/_table.scss
@@ -368,6 +368,7 @@ table > .head,
 
   > .filter.cell {
     overflow: visible;
+    z-index: 2;
   }
 }
 
